# WorkLog

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
api/: __init__.py  digest.py  feed.py  main.py  social.py
bot/: __init__.py  main.py  matcher.py  scheduler.py  social.py
docs/: deploy.md  e2e-checklist.md  phase1-e2e.md  phase2-web.md  phase3-feed.md  phase4-social.md  phase5-polish.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_feed_ranking.py  0003_social_feedback.py  0004_digest_runs.py
scripts/: doctor.py  e2e_api.py  generate_deploy_env.py  set_vercel_production_env.py  sync_discord_commands.py
shared/: __init__.py  config.py  db.py  embeddings.py  models.py  schemas.py
web/: .env.example  .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/api/auth/callback/discord/: route.ts
web/app/api/auth/login/: route.ts
web/app/api/projects/[id]/follow/: route.ts
web/app/api/updates/[id]/comment/: route.ts
web/app/api/updates/[id]/kudo/: route.ts
web/app/profile/: page.tsx
web/app/projects/[id]/: page.tsx
web/app/showcase/: page.tsx
web/app/updates/[id]/: page.tsx
web/components/: ProjectFollowButton.tsx  UpdateSocialPanel.tsx
web/lib/: api.ts  auth.ts  discord.ts  session.ts  types.ts
